# playground

./: .gitattributes  .gitmodules  sin_p2_i16.json
rust_math/: Cargo.toml  rust-toolchain.toml
rust_math/gen_test_data/: Cargo.toml
rust_math/gen_test_data/src/: main.rs
rust_math/plot/: Cargo.toml
rust_math/plot/src/: main.rs
rust_math/src/: angle.rs  atan.rs  atan_p2.rs  atan_p3.rs  atan_p4.rs  atan_p5.rs  bits.rs  lib.rs  main.rs  min_max.rs  round_bits.rs  round_bits_ties_even.rs  sin.rs  sin_cos.rs  sqrt.rs
