[package]
name = "rust_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
num-traits = "0.2"
primitive_promotion = "0.1"

[dev-dependencies]
anyhow = "1"
approx = "0.5"
itertools = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 3
